# libigl-example-triangle

./: CMakeLists.txt  main.cpp
